--- a/web/static/cmd.css
+++ b/web/static/cmd.css
@@ -1,3 +1,10 @@
+/*
+ * $Id$
+ *
+ * Copyright 2000, All rights reserved
+ * See ../Copyright for more information
+ */
+
 div.text, div.decoration, div.default, div.header-line {
     color: #505050;
     font-family: monospace;
@@ -9,7 +16,7 @@ div.data {
 }
 
 div.line {
-    border: 1px solid red;
+    border: 1px solid #ffd0d0;
     display: table;
 }
 
@@ -22,7 +29,7 @@ div.indent {
 }
 
 div.item {
-    border: 1px solid blue;
+    border: 1px solid #d0d0ff;
 }
 
 
@@ -51,3 +58,344 @@ div.output {
     font-family: monospace;
     white-space: pre;
 }
+
+div.header-line {
+    color: #ffffff;
+    background: none repeat scroll 0 0 #0D5995;
+    margin-top: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+/*
+ * juise rendering
+ */
+
+div.hidden, img.hidden {
+    display: none;
+}
+
+div.keeper-active div.icon-box img.keeper {
+    border: 1px solid #966535;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+div.icon-box img.keeper {
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+div#debug-container {
+    font-size: 70%;
+    display: block;
+    color: blue;
+    border: 1px solid #d0d0ff;
+}
+
+div#debug-log {
+    white-space: pre;
+}
+
+div#header {
+    width: 95%;
+    height: 60px;
+    padding: 10px;
+}
+
+div#header-logo {
+    display: table-cell;
+    background: url(/images/logo.png) no-repeat;
+    margin-left: 10px;
+    height: 60px;
+    width: 200px;
+    border-right: 1px #a0ffa0 solid;
+}
+
+div#header-info {
+    display: table-cell;
+    height: 60px;
+    width: 60%;
+    border-right: 1px #a0ffa0 solid;
+}
+
+div#header-status {
+    height: 60px;
+    width: 200px;
+    display: table-cell;
+}
+
+xdiv#header-status div, xdiv#header-info div {
+    display: inline-block;
+}
+
+div#target-list {
+    border-top: 1px solid #a0ffa0;
+    display: block;
+}
+
+div#target-title {
+    display: table-cell;
+}
+
+div#target-history {
+    border: 1px solid #659635;
+    position: absolute;
+    width: 25%;
+}
+
+div.target-history-name {
+    display: inline-block;
+}
+
+div.target-info {
+    display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 5px 10px 5px 10px;
+}
+
+div#target-contents, div#target-contents-none {
+    display: table-cell;
+    font-family: Verdana, Arial, Helvetica, sans-serif ;
+}
+
+div#target-contents-none {
+    padding-left: 10px;
+}
+
+div.target {
+    display: inline-block;
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+div#command-history {
+    border: 1px solid #659635;
+    position: absolute;
+    width: 60em;
+    font-family: Verdana, Arial, Helvetica, sans-serif ;
+    font-family: monospace;
+    font-family: monospace;
+    font-size: 12px;
+    background: #e0e0ff;
+}
+
+div.command-history-entry:hover {
+    background: #c0c0ff;
+}
+
+div.command-history-entry {
+    border: 1px solid #d0d0ff;
+}
+
+div#prefs-form-wrapper {
+    border: 1px solid #d0d0ff;
+    position: absolute;
+    width: 25%;
+}
+
+div#prefs-title {
+    font-size: 120%;
+    font-weight: 600;
+}
+
+div.prefs-item {
+    display: table-row;
+}
+
+div.prefs-item label {
+    padding-left: 10px;
+    padding-right: 5px;
+}
+
+div.prefs-item label, div.prefs-item input {
+    display: table-cell;
+}
+
+button#prefs-restore {
+    float: left;
+}
+
+input#prefs-submit {
+    float: right;
+}
+
+div#footer {
+    padding-top: 100px;
+    clear: both;
+    display: block;
+    height: 100px;
+    width: 100%;
+    font-size: 8;
+    text-align: center;
+}
+
+div#command-area {
+    display: block;
+    padding: 10px;
+}
+
+form#command-form {
+    margin: 0px;
+}
+
+input.command-line {
+    font-family: Verdana, Arial, Helvetica, sans-serif ;
+    font-family: monospace;
+}
+
+div.command-wrapper {
+    border: 1px solid blue;
+    margin-top: 5px;
+    background: white;
+}
+
+div.command-target, input.command-target {
+    display: inline-block;
+    font-size: 12px;
+    font-family: Verdana, Arial, Helvetica, sans-serif ;
+}
+
+div.label {
+    display: inline;
+    padding-left: 3px;
+    padding-right: 3px;
+    font-size: 12px;
+}
+
+div.command-line, input.command-line {
+    display: inline-block;
+    background: #e0e0ff;
+    font-family: monospace;
+    font-size: 12px;
+}
+
+div.command-number {
+    display: inline-block;
+    font-size: 70%;
+    float: right;
+}
+
+div.command-output {
+    padding: 3px;
+    font-family: monospace;
+    font-size: 12px;
+}
+
+div.icon-box {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+div#debug-title {
+    display: inline-block;
+}
+
+img.icon {
+ height: 16px;
+}
+
+.buttonish {
+    text-align: center;
+    text-decoration: none;
+    text-shadow: -1px -1px 2px #777777;
+    text-shadow: rgba(10, 10, 10, 0.5) 1px 2px 2px;
+}
+
+.rounded {
+    border: 1px solid #659635;
+    background: #99ca28;
+    padding: 2px 8px 2px 8px;
+
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.green {
+    color: #ffffff;
+    background: linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
+                                          #5DA331 97%, #659635 100%);
+    background: -moz-linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
+                                          #5DA331 97%, #659635 100%);
+    background: -webkit-linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
+                                          #5DA331 97%, #659635 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
+                      startColorstr='#9bcb2a, endColorstr='#659635);
+}
+
+.blue {
+    color: #0c0c0c;
+    background: linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
+                                          #e0e0ff 97%, #f0f0ff 100%);
+    background: -moz-linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
+                                          #e0e0ff 97%, #f0f0ff 100%);
+    background: -webkit-linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
+                                          #e0e0ff 97%, #f0f0ff 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
+                              startColorstr='#c0c0ff, endColorstr='#f0f0ff);
+}
+
+/*
+ * No longer used but worth remembering...
+ */
+div.aqua {
+    width: 155px;
+    height: 35px;
+    background: #cde;
+    border: 2px solid #ccc;
+    border-color: #8ba2c1 #5890bf #4f93ca #768fa5;
+    font: 600 16px/1 Lucida Sans, Verdana, sans-serif;
+    color: #fff;
+    text-shadow: rgba(10, 10, 10, 0.5) 1px 2px 2px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    border-radius: 16px; -moz-border-radius: 16px; -webkit-border-radius: 16px;
+    box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+    -moz-box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+    -webkit-box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+}
+
+div.aqua:hover {
+    text-shadow: rgb(255, 255, 255) 0px 0px 5px;
+}
+
+
+.new-aqua {
+  width: 155px;
+  height: 35px;
+  background: #cde;
+  border: 2px solid #ccc;
+  border-color: #8ba2c1 #5890bf #4f93ca #768fa5;
+  font: 600 16px/1 Lucida Sans, Verdana, sans-serif;
+  color: #fff;
+  text-shadow: rgba(10, 10, 10, 0.5) 1px 2px 2px;
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  border-radius: 16px;
+  -moz-border-radius: 16px;
+  -webkit-border-radius: 16px;
+  box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+  -moz-box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+  -webkit-box-shadow: 0 10px 16px rgba(66, 140, 240, 0.5), inset 0 -8px 12px 0 #6bf, inset 0 -8px 0 8px #48c, inset 0 -35px 15px -10px #7ad;
+}
+.new-aqua:hover {
+  text-shadow: rgb(255, 255, 255) 0px 0px 5px;
+}
+
+
+
+
