--- a/web/static/cmd.css
+++ b/web/static/cmd.css
@@ -145,10 +145,30 @@ div#target-history {
     border: 1px solid #659635;
     position: absolute;
     width: 25%;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+form#target-history-form {
+    margin-bottom: 0px;
 }
 
 div.target-history-name {
     display: inline-block;
+}
+
+div.target-history-entry:hover {
+    background: #659635;
+}
+
+div.target-history-entry:first-child {
+    border-top: 0px none;
+}
+
+div.target-history-entry {
+    border-top: 1px solid #659635;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 div.target-info {
@@ -177,7 +197,7 @@ div.target {
 }
 
 div#command-history {
-    border: 1px solid #659635;
+    border: 1px solid #c0c0ff;
     position: absolute;
     width: 60em;
     font-family: Verdana, Arial, Helvetica, sans-serif ;
@@ -256,6 +276,7 @@ form#command-form {
 input.command-line {
     font-family: Verdana, Arial, Helvetica, sans-serif ;
     font-family: monospace;
+    font-size: 12px;
 }
 
 div.command-wrapper {
@@ -277,9 +298,8 @@ div.label {
     font-size: 12px;
 }
 
-div.command-line, input.command-line {
+div.command-line {
     display: inline-block;
-    background: #e0e0ff;
     font-family: monospace;
     font-size: 12px;
 }
@@ -317,6 +337,12 @@ img.icon {
     text-shadow: rgba(10, 10, 10, 0.5) 1px 2px 2px;
 }
 
+input.text-entry {
+    border-style: inset;
+    border-width: 2px;
+    border-radius: 10px;
+}
+
 .rounded {
     border: 1px solid #659635;
     background: #99ca28;
@@ -329,26 +355,26 @@ img.icon {
 
 .green {
     color: #ffffff;
-    background: linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
-                                          #5DA331 97%, #659635 100%);
-    background: -moz-linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
-                                          #5DA331 97%, #659635 100%);
-    background: -webkit-linear-gradient(top, #CFE782 0%,  #9BCB2A 2%, 
-                                          #5DA331 97%, #659635 100%);
+    background: linear-gradient(top,
+		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
+    background: -moz-linear-gradient(top,
+		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
+    background: -webkit-linear-gradient(top,
+		#5da331 0%,  #659635 2%, #9bcb2a 97%, #cfe782 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
-                      startColorstr='#9bcb2a, endColorstr='#659635);
+		startColorstr='#659635', endColorstr='#9bcb2a');
 }
 
 .blue {
     color: #0c0c0c;
-    background: linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
-                                          #e0e0ff 97%, #f0f0ff 100%);
-    background: -moz-linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
-                                          #e0e0ff 97%, #f0f0ff 100%);
-    background: -webkit-linear-gradient(top, #c0c0ff 0%,  #d0d0ff 2%, 
-                                          #e0e0ff 97%, #f0f0ff 100%);
+    background: linear-gradient(top, 
+		#a0a0ff 0%,  #d0d0ff 2%, #e0e0ff 97%, #f0f0ff 100%);
+    background: -moz-linear-gradient(top,
+		 #a0a0ff 0%,  #d0d0ff 2%, #e0e0ff 97%, #f0f0ff 100%);
+    background: -webkit-linear-gradient(top,
+		 #a0a0ff 0%,  #d0d0ff 2%, #e0e0ff 97%, #f0f0ff 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
-                              startColorstr='#c0c0ff, endColorstr='#f0f0ff);
+		startColorstr='#a0a0ff', endColorstr='#f0f0ff');
 }
 
 /*
