--- a/web/static/cli.css
+++ b/web/static/cli.css
@@ -99,6 +99,8 @@ div.header-line {
     color: #ffffff;
     background: none repeat scroll 0 0 #0D5995;
     margin-top: 4px;
+    padding-top: 4px;
+    padding-bottom: 2px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
