--- a/web/themes/black-tie/addons-black-tie.css
+++ b/web/themes/black-tie/addons-black-tie.css
@@ -6,11 +6,16 @@
  */
 
 html {
+#    background: url("addons/html_bg.png") repeat-x scroll 0 0 #5f5f5f;
+}
+
+div#header {
     background: url("addons/html_bg.png") repeat-x scroll 0 0 #5f5f5f;
 }
 
 body {
-    background: url("addons/body_bg.png") repeat-x scroll 0 0;
+#    background: url("addons/body_bg.png") repeat-x scroll 0 0;
+margin: 0;
 }
 
 #input-top {
