--- a/web/clira/clira.css
+++ b/web/clira/clira.css
@@ -412,9 +412,9 @@ div.command-number {
 }
 
 div.output-content {
-    padding: 0;
     font-family: monospace;
     font-size: 12px;
+    padding: 10px;
 }
 
 div.icon-box {
@@ -441,7 +441,7 @@ img.icon {
 input.text-entry {
     border-style: inset;
     border-width: 2px;
-    border-radius: 10px;
+/*    border-radius: 10px; */
     border-color: black #444444 #555555 #444444;
 }
 
@@ -469,6 +469,7 @@ input.text-entry {
 
 .blue {
     color: #0c0c0c;
+/*
     background: linear-gradient(top, 
 		#a0a0ff 0%,  #c8c8ff 10%, #d8d8ff 90%, #f0f0ff 100%);
     background: -moz-linear-gradient(top,
@@ -477,6 +478,7 @@ input.text-entry {
 		 #a0a0ff 0%,  #c8c8ff 10%, #d8d8ff 90%, #f0f0ff 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,
 		startColorstr='#a0a0ff', endColorstr='#f0f0ff');
+*/
 }
 
 .jquery-checkbox {
@@ -527,25 +529,86 @@ div.input {
 }
 
 div.parse {
-    background: grey;
-    padding: 10px;
+    background: #b0b0b0;
     border: 1px solid black;
 }
 
-div.input {
+div.input-debug {
     background: #ffe0e0;
     border-bottom: 1px solid black;
     padding: 10px;
     font-weight: bold;
 }
 
-div.possibility {
+div.possibility-debug {
     background: #ffe0e0;
     padding: 10px;
     border-bottom: 1px dotted red;
 }
 
-div.match {
+div.match-debug {
     display: inline-block;
     padding: 5px;
+}
+
+div.command-token, div.command-token div {
+    display: inline-block;
+}
+
+div.parse-details {
+/*    display: none; */
+}
+
+div.command-line {
+    font-weight: bold;
+}
+
+div.match-details {
+    display: inline-block;
+}
+
+div.possibility {
+/*    background: #ffe0e0; */
+    padding: 10px;
+    border-bottom: 1px dotted red;
+}
+
+div.parse-implicit-keyword, div.parse-token, 
+        div.parse-trailing, div.parse-missing {
+    display: inline-block;
+}
+
+div.parse-implicit-keyword, div.parse-trailing, div.parse-missing {
+    font-style: italic;
+    font-weight: normal;
+}
+
+div.parse-token {
+    font-weight: bold;
+}
+
+div.parse-mandatory {
+    color: red;
+    display: inline-block;
+}
+
+div.parse-mandatory-value {
+    color: red;
+    font-style: italic;
+    display: inline-block;
+}
+
+div.output-content can-hide div.parse {
+    display: none;
+}
+
+div.command-help {
+    font-size: smaller;
+}
+
+img.rendered {
+    float: left;
+    margin-right: 5px;
+    max-width: 16px;
+    vertical-align: middle;
 }
