--- a/web/clira/clira.css
+++ b/web/clira/clira.css
@@ -612,3 +612,8 @@ img.rendered {
     max-width: 16px;
     vertical-align: middle;
 }
+
+div.map-small {
+    width: 300px;
+    height: 200px;
+}
