--- a/web/clira/clira.css
+++ b/web/clira/clira.css
@@ -19,7 +19,7 @@ button.ui-button-icon-only {
     vertical-align: middle;
 }
 
-div#debug-container div.ui-widget-header {
+div.ui-widget-header {
     padding: 4px;
 }
 
@@ -169,9 +169,9 @@ div#debug-log {
 }
 
 div#header {
-    width: 100%;
+/*    width: 100%; */
     height: 30px;
-/*    padding: 10px; */
+    padding: 0px 0px 40px 30px ;
 /*    padding-left: 30px; */
 /*    margin-bottom: 4px; */
 }
@@ -187,10 +187,10 @@ span.ui-icon-alert {
 }
 
 div#header-logo {
-    display: table-cell;
-#    background: url(/images/logo.png) no-repeat;
+    display: inline-block;
+    background: url(/images/logo.png) no-repeat;
     height: 60px;
-    width: 200px;
+    width: 60px;
 }
 
 div#header-info {
@@ -616,6 +616,9 @@ div.output-content div.parse:first-of-type {
 
 div.command-help {
     font-size: smaller;
+    font-style: italic;
+    padding-left: 20px;
+    padding-bottom: 5px;
 }
 
 img.rendered {
@@ -628,4 +631,8 @@ img.rendered {
 div.map-small {
     width: 300px;
     height: 200px;
+}
+
+div#debug-container {
+    background-color: blue;
 }
