--- a/web/themes/clira/jquery-ui-clira.css
+++ b/web/themes/clira/jquery-ui-clira.css
@@ -112,13 +112,13 @@
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
     font-weight: normal;
-    color: #e3e3e3;
+    color: rgb(100, 100, 100);
 }
 
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-    color: #e3e3e3;
+    color: rgb(100, 100, 100);
     text-decoration: none;
 }
 
@@ -331,7 +331,6 @@ button.ui-button-icons-only {
     display: block;
     font-size: 12px;
     font-weight: bold;
-    line-height: 20px;
 }
 
 .ui-button-text-only .ui-button-text {
@@ -339,6 +338,7 @@ button.ui-button-icons-only {
     border: solid 1px rgba(3, 62, 116, 0.80);
     color: #fff;
     padding: 6px 10px;
+    line-height: 18px;
 }
 
 .ui-button-icon-only .ui-button-text,
