* Add tooltip hovers to 'on <device> <show command>' fields including (if   available): help, tag name, tag type, XPath.  Note this requires a supported   version of Junos running on the router (13.2+) * Add QTip2 to Clira

--- a/web/clira/clira.css
+++ b/web/clira/clira.css
@@ -726,3 +726,18 @@ ul.ui-autocomplete li.ui-menu-item a.label {
 ul.ui-autocomplete li.ui-menu-item a.help {
     float: right;
 }
+
+a.xpath-link {
+    text-decoration: none;
+}
+
+div.xpath-wrapper {
+    margin-top: 8px;
+    padding-top: 5px;
+    border-top: solid 1px #c8c8c8;
+}
+
+div.xpath {
+    display: none;
+    margin-top: 8px;
+}
