--- a/web/css/clira.css
+++ b/web/css/clira.css
@@ -317,6 +317,14 @@ div#footer {
     text-align: center;
 }
 
+div#input-history {
+    display: inline-block;
+    float: left;
+    margin-right: 5px;
+    position: relative;
+    width: 70%;
+}
+
 div#input-top {
     display: block;
     height: 70px;
@@ -325,6 +333,28 @@ div#input-top {
     background-color: rgb(245, 245, 245);
     border-bottom: rgb(200, 200, 200) solid 1px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+div#input-history .pulldown {
+    border: solid 1px rgb(180, 180, 200);
+    padding: 0px;
+    width: 100%;
+}
+
+div#mru-pulldown {
+    margin-top: 40px;
+    position: absolute;
+    width: 100%;
+}
+
+div#mru-pulldown .mru-item {
+    padding: 5px;
+}
+
+div#mru-pulldown .mru-item:hover {
+    background: rgb(242, 244, 255);
+    cursor: pointer;
+    font-weight: 700;
 }
 
 div#input-top .logo {
@@ -341,8 +371,8 @@ div#target-top,
 div#command-top {
     display: inline-block;
     float: left;
-    margin: 10px 5px 10px 5px;
-    width: 70%;
+    margin: 10px 5px 0px 0px;
+    width: 100%;
 }
 
 div#command-top .input-box {
