Use output in template

--- a/web/clira/templates/show-commands.hbs
+++ b/web/clira/templates/show-commands.hbs
@@ -1,5 +1,5 @@
 <div class='show-command-top'>
-    {{#each commands}}
+    {{#each output.commands}}
         <div class='show-command'>
             <div class='show-command-name'>{{command}}</div>
             <div class='command-help'>{{help}}</div>
