--- a/web/clira/clira.css
+++ b/web/clira/clira.css
@@ -107,10 +107,17 @@ div.header-line {
     background: none repeat scroll 0 0 #0D5995;
     margin-top: 4px;
     padding-top: 4px;
-    padding-bottom: 2px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
+
+div.header-line-empty {
+    color: #ffffff;
+    background: none repeat scroll 0 0 #0D5995;
+    padding-top: 4px;
+    padding-bottom: 2px;
+}
+    
 
 /*
  * juise rendering
