Do not replace action functions, instead append our function to existing action functions hash

--- a/web/clira/templates/location.hbs
+++ b/web/clira/templates/location.hbs
@@ -6,7 +6,7 @@
     set system location latitude {{output.lat}} longitude {{output.lng}}
   </div>
   <div>
-    <button  {{action 'toggle'}}>
+    <button  {{action 'toggleMap'}}>
     {{#if output.hide}}  
       Map it
     {{else}}
