Do not display debug container when not enabled

--- a/web/css/clira.css
+++ b/web/css/clira.css
@@ -148,7 +148,7 @@ div#debug-container {
     border: 1px solid #d0d0ff;
     bottom: 0;
     color: blue;
-    display: box;
+    display: none;
     font-size: 70%;
     position: fixed;
     width: 100%;
