--- a/web/themes/clira/jquery-ui-clira.css
+++ b/web/themes/clira/jquery-ui-clira.css
@@ -129,6 +129,7 @@
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
     color: rgb(3, 3, 134);
+    background-color: #cccccc;
     font-weight: normal;
 }
 
